# compiler-speed-test

./: CMakeLists.txt  boostmain.cpp  computemain.cpp  get_file_contents.cpp  get_file_contents.h  init.sh  iomain.cpp  last_modified.cpp  last_modified.h  main.cpp  opencvmain.cpp  shadertest.cpp  shadertest.h
linux/: Makefile.tcc  benchmark-commandos.sh  boostunittests.cpp  fifo.c  fifo.h  fifo2.c  fifo2.h  fifo2test.c  fifo_q.h  fifotest.c  hello.c  init.sh  minunitexample.c  unittestcpptests.cpp
